# sett-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  concepts.md  getting_started.md
examples/: basic_agent.py  multi_agent.py  with_ethics.py  with_executor.py
sett/: __init__.py  exceptions.py
sett/biometric_ruler/: __init__.py  biometric_reading.py
sett/core_ruler/: __init__.py  action.py  agent.py  executor.py  expert.py  orchestrator.py  phrasing_expert.py  pipeline.py  stub_agent.py
sett/ethics_ruler/ethic_kernel/: context_analyzer.py  filter.py  rules.py
sett/memory_ruler/: private.py  universal.py
sett/risk_ruler/: __init__.py  environmental_context.py  risk_level.py  risk_profile.py
sett/services_llm/: anthropic.py  base.py  gemini.py  ollama.py  openai.py
sett/services_sentiment/: __init__.py  base.py  google.py
sett/services_tts_stt/: __init__.py  base.py  elevenlabs.py  google.py
templates/: README.md  agent_template.py  expert_template.py
tests/: test_biometric_ruler.py  test_elevenlabs_adapter.py  test_ethics.py  test_executor.py  test_google_sentiment_adapter.py  test_google_tts_stt_adapters.py  test_memory.py  test_ollama_adapter.py  test_orchestrator.py  test_phrasing_expert.py  test_pipeline.py  test_register_analyzer.py  test_rejected_error_attributes.py  test_stub_agent.py  test_version_consistency.py
